--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,8 @@ body {
 
 /* del markers ul  */
 /* обнулення margin та padding */
-ul, li {
+ul,
+li {
   margin: 0;
   padding-left: 0;
   list-style-type: none;
@@ -34,7 +35,12 @@ ul, li {
 p {
   margin: 0;
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 /* прибрав підкреслення з посилань */
@@ -57,25 +63,21 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-
 }
-
 
 /* -------------------------------------------------- */
 
 /* header */
 .header {
-  border-bottom: 1px solid #E7E9FC;
+  border-bottom: 1px solid #e7e9fc;
   display: block;
 }
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
 }
 /* logo Web Studio */
-
 
 .logo {
   margin-right: 76px;
@@ -92,10 +94,12 @@ img {
   color: #2e2f42;
 }
 .list-link {
+
+  
   display: block;
   padding-bottom: 24px;
   padding-top: 24px;
-  
+
   color: #2e2f42;
   font-family: Roboto;
   font-size: 16px;
@@ -125,17 +129,16 @@ img {
 .list {
   gap: 40px;
 }
-.nav-list  {
- display: flex;
- align-items: center;
-}
-.addres-link  {
+.nav-list {
   display: flex;
   align-items: center;
- }
- .list {
+}
+.addres-link {
   display: flex;
-  
+  align-items: center;
+}
+.list {
+  display: flex;
 }
 .nav-list .link {
   color: #2e2f42;
@@ -148,7 +151,7 @@ img {
 }
 
 /* contacts header телефон та пошта*/
-.addres-link:not(:last-child){
+.addres-link:not(:last-child) {
   margin-right: 40px;
 }
 .contacts-list {
@@ -176,16 +179,26 @@ img {
 /* секція Герой */
 
 .hero {
-  background-color: #2e2f42;
+  /* background-color: #2e2f42; */
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero/people-office\ 1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1440px 600px;
+
   padding-top: 188px;
   padding-bottom: 188px;
-  
 }
+
 .hero-text {
   display: block;
   text-align: center;
   /* padding-top: 188px; */
- margin-bottom: 48px;
+  margin-bottom: 48px;
   margin-left: auto;
   margin-right: auto;
   max-width: 496px;
@@ -200,20 +213,15 @@ img {
 /* button в секції Герой */
 
 .hero-button {
-  
   display: block;
   /* margin-bottom: 188px; */
-  
 
-  
   margin-left: auto;
   margin-right: auto;
   min-width: 169px;
   height: 56px;
   border: none;
-  border-radius: 4px; 
-
-
+  border-radius: 4px;
 
   background-color: #4d5ae5;
   font-family: 'Roboto', sans-serif;
@@ -236,6 +244,15 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+.feature-icon {
+
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background: #f4f4fd;
+}
+.icon {
+  
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -255,12 +272,12 @@ img {
   padding-bottom: 120px; */
 }
 .feature {
-  flex-basis: calc((100% - 72px) / 4); 
+  flex-basis: calc((100% - 72px) / 4);
 }
 .title-feature {
-  margin-bottom: 8px; 
+  margin-bottom: 8px;
   max-width: 264px;
-  
+
   font-family: Roboto;
   font-size: 20px;
   font-weight: 500;
@@ -282,7 +299,6 @@ img {
   background-color: #f4f4fd;
   padding-top: 120px;
   padding-bottom: 120px;
-
 }
 .title-team {
   margin-bottom: 72px;
@@ -300,10 +316,8 @@ img {
 .team-scroll {
   display: flex;
   gap: 24px;
-  
 }
 .team-list {
-  
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
@@ -314,10 +328,9 @@ img {
 }
 
 .text-team {
+  text-align: center;
 
-text-align: center;
- 
-font-family: Roboto;
+  font-family: Roboto;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
@@ -344,7 +357,6 @@ font-family: Roboto;
 .app {
   margin-bottom: 8px;
 
-
   color: #2e2f42;
   text-align: center;
   font-family: Roboto;
@@ -353,19 +365,22 @@ font-family: Roboto;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
-}
-
+/* }.icon-team {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+ margin-top: 8px;
+} */
 /* Our Portfolio */
 
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
-
 }
 
 .title-portfolio {
   margin-bottom: 72px;
-
 
   color: #2e2f42;
   text-align: center;
@@ -385,13 +400,11 @@ font-family: Roboto;
 }
 .portfolio-scroll {
   width: calc((100% - 48px) / 3);
-
 }
 .portfolio-cont {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-
 }
 .text-app {
   text-align: center;
@@ -407,7 +420,7 @@ font-family: Roboto;
 
 .footer {
   background-color: #2e2f42;
-  
+
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -423,7 +436,6 @@ font-family: Roboto;
   font-weight: 700;
 }
 .logo-link-footer {
- 
   color: #f4f4fd;
 }
 .text-footer {
@@ -435,4 +447,21 @@ font-family: Roboto;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
+}
+
+.social-list {
+  display: flex;
+  color: #ffffff;
+  justify-content: center;
+
+  font-family: Roboto;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+}
+.social-footer-icon {
+  fill: #f4f4fd;
+}
+.footer-icon-list {
+  display: flex;
 }
