--- a/css/styles.css
+++ b/css/styles.css
@@ -365,13 +365,29 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
-/* }.icon-team {
+}.icon-team {
   display: flex;
   gap: 24px;
   justify-content: center;
   align-items: center;
  margin-top: 8px;
-} */
+}
+.circle-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  
+}
+.circle-icon:hover {
+  background-color: #31D0AA;
+}
+.svg-team {
+  fill: #F4F4FD;
+}
 /* Our Portfolio */
 
 .portfolio {
@@ -458,10 +474,13 @@ img {
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
+
+  outline: 2px solid #31D0AA;
 }
-.social-footer-icon {
-  fill: #f4f4fd;
-}
+
 .footer-icon-list {
   display: flex;
+}
+.svg-footer {
+  fill: #F4F4FD;
 }
