--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,16 @@ img {
 .logo-link-header {
   color: #2e2f42;
 }
+.list-link.active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+
+  border-radius: 2px;
+  background-color:#404BBF;
+
+}
 .list-link {
 
   
@@ -244,7 +254,7 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.feature-icon {
+.feature-border {
 
   border-radius: 4px;
   border: 1px solid #8e8f99;
@@ -383,6 +393,9 @@ img {
   
 }
 .circle-icon:hover {
+  background-color: #31D0AA;
+}
+.circle-icon:focus {
   background-color: #31D0AA;
 }
 .svg-team {
