--- a/css/styles.css
+++ b/css/styles.css
@@ -94,18 +94,16 @@ img {
   color: #2e2f42;
 }
 .list-link.active::after {
-  content: "";
+  content: '';
+
   display: block;
   width: 100%;
   height: 4px;
 
   border-radius: 2px;
-  background-color:#404BBF;
-
+  background-color: #404bbf;
 }
 .list-link {
-
-  
   display: block;
   padding-bottom: 24px;
   padding-top: 24px;
@@ -255,13 +253,11 @@ img {
   padding-bottom: 120px;
 }
 .feature-border {
-
   border-radius: 4px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
 }
 .icon {
-  
 }
 .visually-hidden {
   position: absolute;
@@ -331,6 +327,10 @@ img {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
+
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .member-name {
   padding-top: 32px;
@@ -375,31 +375,31 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
-}.icon-team {
+}
+.icon-team {
   display: flex;
   gap: 24px;
   justify-content: center;
   align-items: center;
- margin-top: 8px;
+  margin-top: 8px;
 }
 .circle-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #4D5AE5;
+  background-color: #4d5ae5;
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  
 }
 .circle-icon:hover {
-  background-color: #31D0AA;
+  background-color: #31d0aa;
 }
 .circle-icon:focus {
-  background-color: #31D0AA;
+  background-color: #31d0aa;
 }
 .svg-team {
-  fill: #F4F4FD;
+  fill: #f4f4fd;
 }
 /* Our Portfolio */
 
@@ -488,12 +488,12 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 
-  outline: 2px solid #31D0AA;
+  outline: 2px solid #31d0aa;
 }
 
 .footer-icon-list {
   display: flex;
 }
 .svg-footer {
-  fill: #F4F4FD;
+  fill: #f4f4fd;
 }
