--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,9 @@ img {
 .list-link.active::after {
   content: '';
 
+  position: absolute;
+  bottom: -1px;
+
   display: block;
   width: 100%;
   height: 4px;
@@ -104,6 +107,8 @@ img {
   background-color: #404bbf;
 }
 .list-link {
+  position: relative;
+
   display: block;
   padding-bottom: 24px;
   padding-top: 24px;
@@ -257,8 +262,7 @@ img {
   border: 1px solid #8e8f99;
   background: #f4f4fd;
 }
-.icon {
-}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -444,6 +448,30 @@ img {
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
+.overlay-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  padding: 40px 32px;
+
+  outline: 2px solid red;
+
+
+
+  color: #F4F4FD;
+
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.overlay {
+  position: relative;
+}
+
+
 
 /* footer */
 
