--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,8 @@ img {
 .header {
   border-bottom: 1px solid #e7e9fc;
   display: block;
+
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -108,12 +110,12 @@ img {
 }
 .list-link {
   position: relative;
-
+  color: #404bbf; 
   display: block;
   padding-bottom: 24px;
   padding-top: 24px;
 
-  color: #2e2f42;
+  /* color: #2e2f42; */
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
