--- a/css/styles.css
+++ b/css/styles.css
@@ -195,18 +195,23 @@ img {
 
 .hero {
   /* background-color: #2e2f42; */
+
+
   background-image: linear-gradient(
-      to bottom,
+     
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/hero/people-office\ 1.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1440px 600px;
+  background-size: cover;
 
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+
+  
 }
 
 .hero-text {
@@ -228,6 +233,8 @@ img {
 /* button в секції Герой */
 
 .hero-button {
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
   display: block;
   /* margin-bottom: 188px; */
 
