--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,8 @@ img {
   border-bottom: 1px solid #e7e9fc;
   display: block;
 
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -91,9 +92,14 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
 }
-
+.link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .logo-link-header {
   color: #2e2f42;
+}
+.list-link.active {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-link.active::after {
   content: '';
@@ -110,7 +116,7 @@ img {
 }
 .list-link {
   position: relative;
-  color: #404bbf; 
+  color: #404bbf;
   display: block;
   padding-bottom: 24px;
   padding-top: 24px;
@@ -196,13 +202,12 @@ img {
 .hero {
   /* background-color: #2e2f42; */
 
-
   background-image: linear-gradient(
-     
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero/people-office\ 1.jpg);
+    url(../images/people-office.jpg);
+    
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -210,8 +215,6 @@ img {
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
-
-  
 }
 
 .hero-text {
@@ -233,7 +236,7 @@ img {
 /* button в секції Герой */
 
 .hero-button {
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   display: block;
   /* margin-bottom: 188px; */
@@ -469,9 +472,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   outline: 2px solid red;
 
-
-
-  color: #F4F4FD;
+  color: #f4f4fd;
 
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -479,8 +480,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .overlay {
   position: relative;
 }
-
-
 
 /* footer */
 
