--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ img {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office.jpg);
-    
+
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -270,9 +270,20 @@ img {
   padding-bottom: 120px;
 }
 .feature-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  margin-bottom: 8px;
+
   border-radius: 4px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
+  
+ 
+}
+.feature-icon {
+  
 }
 
 .visually-hidden {
@@ -287,6 +298,7 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .feature-list {
   display: flex;
   gap: 24px;
@@ -399,7 +411,7 @@ img {
   align-items: center;
   margin-top: 8px;
 }
-.circle-icon {
+/* .circle-icon {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -413,8 +425,29 @@ img {
 }
 .circle-icon:focus {
   background-color: #31d0aa;
+} */
+.transit-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.transit-link:hover {
+  background-color: #404bbf;
+
+}
+.transit-link:focus {
+  background-color: #404bbf;
+  
 }
 .svg-team {
+width: 16px;
+height: 16px;
+
   fill: #f4f4fd;
 }
 /* Our Portfolio */
