--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,7 @@ img {
   padding-top: 188px;
   padding-bottom: 188px;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-text {
@@ -410,7 +411,10 @@ img {
   justify-content: center;
   align-items: center;
   margin-top: 8px;
+
 }
+
+/* не розумію, чому не вірно так прописати. в цьому випадку всі фігури та свгешки відображаються коректно, а по новому, нижче, некоректно, але бот каже - так правильно */
 /* .circle-icon {
   display: flex;
   align-items: center;
@@ -427,6 +431,8 @@ img {
   background-color: #31d0aa;
 } */
 .transit-link {
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -449,6 +455,10 @@ width: 16px;
 height: 16px;
 
   fill: #f4f4fd;
+}
+.circle-icon {
+  width: 40px;
+  height: 40px;
 }
 /* Our Portfolio */
 
@@ -478,6 +488,10 @@ height: 16px;
 }
 .portfolio-scroll {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-scroll:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
 }
 .portfolio-cont {
   padding: 32px 16px;
@@ -498,6 +512,8 @@ height: 16px;
   top: 0;
   left: 0;
 
+  transform: translateY(100%); 
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 100%;
 
@@ -506,12 +522,14 @@ height: 16px;
   outline: 2px solid red;
 
   color: #f4f4fd;
-
+  background-color: #4d5ae5;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 .overlay {
   position: relative;
+  overflow: hidden;
+
 }
 
 /* footer */
