--- a/css/styles.css
+++ b/css/styles.css
@@ -280,11 +280,8 @@ img {
   border-radius: 4px;
   border: 1px solid #8e8f99;
   background: #f4f4fd;
-  
- 
 }
 .feature-icon {
-  
 }
 
 .visually-hidden {
@@ -411,7 +408,6 @@ img {
   justify-content: center;
   align-items: center;
   margin-top: 8px;
-
 }
 
 /* не розумію, чому не вірно так прописати. в цьому випадку всі фігури та свгешки відображаються коректно, а по новому, нижче, некоректно, але бот каже - так правильно */
@@ -431,7 +427,7 @@ img {
   background-color: #31d0aa;
 } */
 .transit-link {
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   width: 100%;
   height: 100%;
@@ -440,19 +436,16 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 .transit-link:hover {
   background-color: #404bbf;
-
 }
 .transit-link:focus {
   background-color: #404bbf;
-  
 }
 .svg-team {
-width: 16px;
-height: 16px;
+  width: 16px;
+  height: 16px;
 
   fill: #f4f4fd;
 }
@@ -491,8 +484,11 @@ height: 16px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-scroll:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
+
 .portfolio-cont {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -512,8 +508,8 @@ height: 16px;
   top: 0;
   left: 0;
 
-  transform: translateY(100%); 
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 100%;
 
@@ -529,7 +525,6 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .overlay {
   position: relative;
   overflow: hidden;
-
 }
 
 /* footer */
