--- a/css/styles.css
+++ b/css/styles.css
@@ -508,7 +508,7 @@ img {
   top: 0;
   left: 0;
 
-  transform: translateY(0%);
+  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 100%;
@@ -535,6 +535,16 @@ img {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+
+.container.footer {
+  display: flex;
+  align-items: baseline;
+
+}
+.footer-part1 {
+  margin-right: 120px;
+
+}
 .logo-footer {
   display: inline-block;
   margin-bottom: 16px;
@@ -560,17 +570,31 @@ img {
   letter-spacing: 0.32px;
 }
 
-.social-list {
+/* .social-list {
   display: flex;
   color: #ffffff;
   justify-content: center;
 
   font-family: Roboto;
-  font-weight: 500;
+  
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
 
   outline: 2px solid #31d0aa;
+} */
+.text-social-list {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+
+}
+.icon-team-footer {
+  display: flex;
+  gap: 16px;
+  
 }
 
 .footer-icon-list {
