--- a/css/styles.css
+++ b/css/styles.css
@@ -486,7 +486,7 @@ img {
 .portfolio-scroll:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(0%);
+  transform: translateY(100%);
 }
 
 .portfolio-cont {
@@ -522,9 +522,13 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+.overlay-text:hover {
+  transform: translateY(0%);
+}
 .overlay {
   position: relative;
   overflow: hidden;
+  
 }
 
 /* footer */
@@ -594,7 +598,7 @@ img {
 .icon-team-footer {
   display: flex;
   gap: 16px;
-  
+
 }
 
 .footer-icon-list {
