--- a/css/styles.css
+++ b/css/styles.css
@@ -484,9 +484,8 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-scroll:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(100%);
+  box-shadow:  1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
 
 .portfolio-cont {
@@ -523,7 +522,7 @@ img {
   letter-spacing: 0.02em;
 }
 .overlay-text:hover {
-  transform: translateY(0%);
+  transform: translateY(100%);
 }
 .overlay {
   position: relative;
