--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,20 @@
 html {
   box-sizing: border-box;
 }
+
 *,
 *::after,
 *::before {
   box-sizing: inherit;
 }
+
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   color: #434455;
   background-color: #ffffff;
 }
+
 /* за умовчанням в браузері,тому можна додати тільки інші параметри */
 /* body{
     font-size: 16px;
@@ -35,6 +38,7 @@ li {
 p {
   margin: 0;
 }
+
 h1,
 h2,
 h3,
@@ -43,12 +47,14 @@ h5,
 h6 {
   margin: 0;
 }
+
 /* прибрав підкреслення з посилань */
 .logo,
 .list-link,
 .logo-footer {
   text-decoration: none;
 }
+
 a {
   text-decoration: none;
 }
@@ -75,11 +81,13 @@ img {
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 /* logo Web Studio */
 
 .logo {
@@ -92,15 +100,19 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
 }
+
 .link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .logo-link-header {
   color: #2e2f42;
 }
+
 .list-link.active {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .list-link.active::after {
   content: '';
 
@@ -114,6 +126,7 @@ img {
   border-radius: 2px;
   background-color: #404bbf;
 }
+
 .list-link {
   position: relative;
   color: #404bbf;
@@ -133,15 +146,19 @@ img {
 .list-link:hover {
   color: #404bbf;
 }
+
 .list-link:focus {
   color: #404bbf;
 }
+
 .nav-list:hover {
   color: #404bbf;
 }
+
 .nav-list:focus {
   color: #404bbf;
 }
+
 .nav-list:active {
   color: #404bbf;
 }
@@ -150,17 +167,21 @@ img {
 .list {
   gap: 40px;
 }
+
 .nav-list {
   display: flex;
   align-items: center;
 }
+
 .addres-link {
   display: flex;
   align-items: center;
 }
+
 .list {
   display: flex;
 }
+
 .nav-list .link {
   color: #2e2f42;
   font-family: Roboto;
@@ -175,6 +196,7 @@ img {
 .addres-link:not(:last-child) {
   margin-right: 40px;
 }
+
 .contacts-list {
   display: flex;
   justify-content: end;
@@ -187,12 +209,15 @@ img {
   letter-spacing: 0.02em;
   color: #434455;
 }
+
 .contacts {
   font-style: normal;
 }
+
 .contacts-list .link:hover {
   color: #404bbf;
 }
+
 .contacts-list .link:focus {
   color: #404bbf;
 }
@@ -202,10 +227,8 @@ img {
 .hero {
   /* background-color: #2e2f42; */
 
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)),
     url(../images/people-office.jpg);
 
   background-repeat: no-repeat;
@@ -258,9 +281,11 @@ img {
   color: #ffffff;
   cursor: pointer;
 }
+
 .hero-button:hover {
   background-color: #404bbf;
 }
+
 .hero-button:focus {
   background-color: #404bbf;
 }
@@ -270,6 +295,7 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
 .feature-border {
   display: flex;
   align-items: center;
@@ -281,8 +307,8 @@ img {
   border: 1px solid #8e8f99;
   background: #f4f4fd;
 }
-.feature-icon {
-}
+
+.feature-icon {}
 
 .visually-hidden {
   position: absolute;
@@ -303,9 +329,11 @@ img {
   /* padding-top: 120px;
   padding-bottom: 120px; */
 }
+
 .feature {
   flex-basis: calc((100% - 72px) / 4);
 }
+
 .title-feature {
   margin-bottom: 8px;
   max-width: 264px;
@@ -317,6 +345,7 @@ img {
   letter-spacing: 0.4px;
   color: #2e2f42;
 }
+
 .text-feature {
   font-family: Roboto;
   font-size: 16px;
@@ -332,6 +361,7 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+
 .title-team {
   margin-bottom: 72px;
 
@@ -345,10 +375,12 @@ img {
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
+
 .team-scroll {
   display: flex;
   gap: 24px;
 }
+
 .team-list {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
@@ -358,6 +390,7 @@ img {
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+
 .member-name {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -373,6 +406,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
+
 .member-team {
   text-align: center;
   margin-bottom: 8px;
@@ -386,10 +420,12 @@ img {
   line-height: 1.2;
   letter-spacing: 0.4px;
 }
+
 .member-scroll {
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
 .app {
   margin-bottom: 8px;
 
@@ -402,6 +438,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.4px;
 }
+
 .icon-team {
   display: flex;
   gap: 24px;
@@ -437,22 +474,27 @@ img {
   align-items: center;
   justify-content: center;
 }
+
 .transit-link:hover {
   background-color: #404bbf;
 }
+
 .transit-link:focus {
   background-color: #404bbf;
 }
+
 .svg-team {
   width: 16px;
   height: 16px;
 
   fill: #f4f4fd;
 }
+
 .circle-icon {
   width: 40px;
   height: 40px;
 }
+
 /* Our Portfolio */
 
 .portfolio {
@@ -473,19 +515,22 @@ img {
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
 }
+
 .portfolio-scroll {
   width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .portfolio-scroll:hover {
-  box-shadow:  1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(0%);
+  box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  /* transform: translateY(0%); */
 }
 
 .portfolio-cont {
@@ -493,6 +538,7 @@ img {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
+
 .text-app {
   text-align: center;
   font-family: Roboto;
@@ -502,6 +548,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
+
 .overlay-text {
   position: absolute;
   top: 0;
@@ -521,13 +568,15 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
 .overlay-text:hover {
-  transform: translateY(100%);
+  transform: translateY(0%);
 }
+
 .overlay {
   position: relative;
   overflow: hidden;
-  
+
 }
 
 /* footer */
@@ -544,10 +593,12 @@ img {
   align-items: baseline;
 
 }
+
 .footer-part1 {
   margin-right: 120px;
 
 }
+
 .logo-footer {
   display: inline-block;
   margin-bottom: 16px;
@@ -559,9 +610,11 @@ img {
   color: #4d5ae5;
   font-weight: 700;
 }
+
 .logo-link-footer {
   color: #f4f4fd;
 }
+
 .text-footer {
   max-width: 264px;
   /* display: inline-block; */
@@ -581,11 +634,12 @@ img {
   font-family: Roboto;
   
   line-height: 1.5; /* 150% */
-  letter-spacing: 0.02em;
+letter-spacing: 0.02em;
 
-  outline: 2px solid #31d0aa;
-} */
-.text-social-list {
+outline: 2px solid #31d0aa;
+}
+
+*/ .text-social-list {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -594,6 +648,7 @@ img {
   margin-bottom: 16px;
 
 }
+
 .icon-team-footer {
   display: flex;
   gap: 16px;
@@ -603,6 +658,7 @@ img {
 .footer-icon-list {
   display: flex;
 }
+
 .svg-footer {
   fill: #f4f4fd;
 }
