--- a/css/styles.css
+++ b/css/styles.css
@@ -641,14 +641,30 @@ outline: 2px solid #31d0aa;
 
 */ .text-social-list {
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  font-size: 16px;  
+line-height: 1.5;
+letter-spacing: 0.02em;
   color: #FFFFFF;
   margin-bottom: 16px;
 
 }
+.link-sicial {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
+}
+.link-sicial:hover {
+  background-color: #31d0aa;
+
+}
+.link-sicial:focus {
+  background-color: #31d0aa;
+}
 .icon-team-footer {
   display: flex;
   gap: 16px;
