--- a/css/styles.css
+++ b/css/styles.css
@@ -639,7 +639,7 @@ letter-spacing: 0.02em;
 
 outline: 2px solid #31d0aa;
 
-.text-social-list {
+.text-social {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
