--- a/css/styles.css
+++ b/css/styles.css
@@ -536,6 +536,9 @@ img {
     0px 2px 1px rgba(46, 47, 66, 0.08);
   /* transform: translateY(0%); */
 }
+.portfolio-scroll:hover .overlay-text {
+  transform: translateY(0%);
+}
 
 .portfolio-cont {
   padding: 32px 16px;
