--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,19 @@ img {
 }
 
 .list-link.active {
+  position: relative;
+  color: #404bbf;
+  display: block;
+  padding-bottom: 24px;
+  padding-top: 24px;
+
+  
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -128,13 +141,14 @@ img {
 }
 
 .list-link {
+  
   position: relative;
-  color: #404bbf;
+  color: #2E2F42;
   display: block;
   padding-bottom: 24px;
   padding-top: 24px;
 
-  /* color: #2e2f42; */
+  
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
@@ -433,7 +447,7 @@ img {
   margin-bottom: 8px;
 
   color: #2e2f42;
-  text-align: center;
+  
   font-family: Roboto;
   font-size: 20px;
   font-style: normal;
@@ -547,7 +561,7 @@ img {
 }
 
 .text-app {
-  text-align: center;
+  
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
@@ -568,7 +582,6 @@ img {
 
   padding: 40px 32px;
 
-  outline: 2px solid red;
 
   color: #f4f4fd;
   background-color: #4d5ae5;
